--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/STATIC/style/normalize.css">
+    <link rel="stylesheet" href="https://abersheeran.com/STATIC/style/normalize.css">
 </head>
 <style>
     html {
