--- a/404.html
+++ b/404.html
@@ -35,6 +35,10 @@
         margin-bottom: 1.5em;
     }
 
+    #message {
+        margin-bottom: 2em;
+    }
+
     .website {
         display: inline-block;
         width: 4em;
@@ -68,6 +72,7 @@
     <header></header>
     <main>
         <div id="title">404</div>
+        <div id="message">如果是刚上传的图片, 请稍等一分钟再访问</div>
         <div id="other">
             <div class="website">
                 <a href="https://github.com/AberSheeran">
